--- a/index.html
+++ b/index.html
@@ -6,55 +6,65 @@
     <link rel="stylesheet" href="buttons.css" />
     <style>
     body {margin:0px;font-size:large;}
-	.hidden {visibility:collapse;display:none;}
-	.expose {visibility:visible;display:block;} // Here for completeness only.
-	.copyright {padding:5px;align:left;font-style:italic;font-size:small;}
+    .hidden {visibility:collapse;display:none;}
+    .expose {visibility:visible;display:block;} /* Here for completeness only. */
+    .copyright {padding:5px;align:left;font-style:italic;font-size:small;}
+    #header {margin:0;padding:0;}
+    #exitApp {margin:0.1em;float:right;}
     </style>
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8" src="fastclick.js"></script>
     <script type="text/javascript">
-	var gWatchID = null;
-	var gOptions = { frequency: 2000 }; // Update every 2 seconds
-	var gOption2 = { filter: 30 };      // degrees required to initiate a watchHeading success callback
-	//
+    var gWatchID = null;
+    var gOptions = { frequency: 2000 }; // Update every 2 seconds
+    var gOption2 = { filter: 30 };      // degrees required to initiate a watchHeading success callback
+    //
     // Wait for PhoneGap to load
-	document.addEventListener("deviceready", onDeviceReady, false);
-	//
-	function compassClear() {
-		document.getElementById('heading').innerHTML = '';
-	}
-	function compassUpdate(heading) {
-		document.getElementById('heading').innerHTML = heading.magneticHeading;
-	}
-	function compassOff() {
-		navigator.compass.clearWatch(gWatchID);
-	}
-
-	//
-	function onDeviceReady() {
-		// hide Exit button. They don't have one on iOS devices.
-		if (device.platform === "iOS") {
-			//alert("got iOS");
-			// http://www.mzcart.com/javascript-how-to-addremove-css-class-from-a-dom-element/
-			document.getElementById('exitApp').classList.add("hidden");
-		}
-		navigator.compass.getCurrentHeading(compassUpdate, function (compassError) { alert('Compass error: ' + compassError.code); });
-		gWatchID = navigator.compass.watchHeading(compassUpdate,
-				function (compassError) { alert('Compass error: ' + compassError.code); },
-				gOptions);
-	}
-	//
-	function onLoad() {
-		accelClear();
-	}
+    document.addEventListener("deviceready", onDeviceReady, false);
+    // Get rid of 300ms delay 
+    document.addEventListener('DOMContentLoaded', function() { FastClick.attach(document.body); }, false);
+    //
+    function compassClear() {
+        document.getElementById('heading').innerHTML = '';
+    }
+    function compassUpdate(heading) {
+        document.getElementById('heading').innerHTML = heading.magneticHeading;
+    }
+    function compassOff() {
+        navigator.compass.clearWatch(gWatchID);
+    }
+    //
+    function onDeviceReady() {
+        // hide Exit button. They don't have one on iOS devices.
+        if (device.platform === "iOS") {
+            //alert("got iOS");
+            // hide Exit button. They don't have one on iOS devices.
+            // http://www.mzcart.com/javascript-how-to-addremove-css-class-from-a-dom-element/
+            document.getElementById('exitApp').classList.add("hidden");
+            /* deals with post-iOS-7 change that covers the status bar */
+            /* http://coenraets.org/blog/2013/09/phonegap-and-cordova-with-ios-7/ */
+            document.body.style.marginTop = "20px";
+        }
+        navigator.compass.getCurrentHeading(compassUpdate, function (compassError) { alert('Compass error: ' + compassError.code); });
+        gWatchID = navigator.compass.watchHeading(compassUpdate,
+                function (compassError) { alert('Compass error: ' + compassError.code); },
+                gOptions);
+    }
+    //
+    function onLoad() {
+        accelClear();
+    }
 
     </script>
 </head>
 <body onload="onLoad()">
-<div class="button button-block button-large"><img align=left src=favicon-48x48.png>Compass</div>
+<div id=header class="button button-block button-large">
+    <img align=left src=favicon-48x48.png>
+    Compass
+    <button id=exitApp onclick='navigator.app.exitApp()' class="button button-pill button-primary button-large">Exit</button>
+</div>
 <p />&nbsp;<p />
-<span onclick='compassOff()'><button class="button button-pill button-primary button-large" style="margin:0.1em">Clear Watch</button></span>
-
-<span onclick='navigator.app.exitApp()'><button id=exitApp class="button button-pill button-primary button-large" style="margin:0.1em;float:right;">Exit</button></span>
+<button onclick='compassOff()' class="button button-pill button-primary button-large" style="margin:0.1em">Clear Watch</button>
 
 <div id=hd class="button button-block button-pill button-primary button-large" style="margin:1em;">Heading: <span id=heading></span></div>
 
