Added versions to all plugins, and cleanup

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
     //
     // Wait for PhoneGap to load
     document.addEventListener("deviceready", onDeviceReady, false);
-    // Get rid of 300ms delay 
-    document.addEventListener('DOMContentLoaded', function() { FastClick.attach(document.body); }, false);
     //
     function compassClear() {
         document.getElementById('heading').innerHTML = '';
@@ -44,6 +42,9 @@
             /* deals with post-iOS-7 change that covers the status bar */
             /* http://coenraets.org/blog/2013/09/phonegap-and-cordova-with-ios-7/ */
             document.body.style.marginTop = "20px";
+        } else if (device.platform == 'Android') {
+            // Get rid of 300ms delay 
+            document.addEventListener('DOMContentLoaded', function() { FastClick.attach(document.body); }, false);
         }
         navigator.compass.getCurrentHeading(compassUpdate, function (compassError) { alert('Compass error: ' + compassError.code); });
         gWatchID = navigator.compass.watchHeading(compassUpdate,
