--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         document.getElementById('heading').innerHTML = '';
     }
     function compassUpdate(heading) {
-        document.getElementById('heading').innerHTML = heading.magneticHeading;
+        document.getElementById('heading').innerHTML = Math.round(heading.magneticHeading * 10) / 10 ;   // Cambié esto
     }
     function compassOff() {
         navigator.compass.clearWatch(gWatchID);
